Add comment for multimedia page reference in indexAPARSemantico.html

--- a/disenyoCSS/indexAPARSemantico.html
+++ b/disenyoCSS/indexAPARSemantico.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <h1 class="none">Página Web APAR</h1>
+    <!-- ========== Página llamada desde la carpeta Multimedia ========== -->
 
     <!-- ========== HEADER ========== -->
     <header>
