--- a/disenyoCSS/indexAPARSemantico.html
+++ b/disenyoCSS/indexAPARSemantico.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APAR</title>
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="static/css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -78,7 +78,7 @@
 
         <div>
           <!-- Logo de la empresa -->
-          <img src="public/DG.webp" alt="APAR logo" />
+          <img src="static/public/DG.webp" alt="APAR logo" />
 
           <!-- Formulario de búsqueda de productos -->
           <form action="">
@@ -209,13 +209,13 @@
           <!-- Banners promocionales -->
           <aside>
             <img
-              src="public/ProductosDestacados/RooGooTire.webp"
+              src="static/public/ProductosDestacados/RooGooTire.webp"
               alt="Promotional banner for RooGoo Tire products"
             />
             <div>
               <button>SHOP NOW</button>
               <img
-                src="public/ProductosDestacados/ASingleDaySale.webp"
+                src="static/public/ProductosDestacados/ASingleDaySale.webp"
                 alt="Single day sale promotional banner"
               />
             </div>
@@ -247,7 +247,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/Neumatico.webp"
+                    src="static/public/ProductosDestacados/Neumatico.webp"
                     alt="Horrison tire product image"
                   />
                   <span aria-label="En oferta">Sale !</span>
@@ -296,7 +296,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/Llanta.webp"
+                    src="static/public/ProductosDestacados/Llanta.webp"
                     alt="Wallnut Desk wheel product image"
                   />
                   <span aria-label="En oferta">Sale !</span>
@@ -345,7 +345,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/DiscoFreno.webp"
+                    src="static/public/ProductosDestacados/DiscoFreno.webp"
                     alt="Arper Round brake disc product image"
                   />
                   <span aria-label="En oferta">Sale !</span>
@@ -394,7 +394,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/Aceite.webp"
+                    src="static/public/ProductosDestacados/Aceite.webp"
                     alt="Auto oil product image"
                   />
                   <span aria-label="En oferta">Sale !</span>
@@ -443,7 +443,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/Rueda.webp"
+                    src="static/public/ProductosDestacados/Rueda.webp"
                     alt="Ulivo Set wheel product image"
                   />
                 </div>
@@ -488,7 +488,7 @@
                 <div>
                   <img
                     class="imagenesProductos"
-                    src="public/ProductosDestacados/Turbocompresor.webp"
+                    src="static/public/ProductosDestacados/Turbocompresor.webp"
                     alt="Ottoman Turbo turbocharger product image"
                   />
                   <span aria-label="En oferta">Sale !</span>
@@ -558,47 +558,47 @@
               </svg>
             </li>
             <li>
-              <img src="public/Marcas/SportCar1.webp" alt="Sportcar logo" />
+              <img src="static/public/Marcas/SportCar1.webp" alt="Sportcar logo" />
             </li>
             <li>
-              <img src="public/Marcas/AutoDetalier.webp" alt="AutoDetailer" />
+              <img src="static/public/Marcas/AutoDetalier.webp" alt="AutoDetailer" />
             </li>
             <li>
-              <img src="public/Marcas/SportCar2.webp" alt="Sportcar logo 2" />
+              <img src="static/public/Marcas/SportCar2.webp" alt="Sportcar logo 2" />
             </li>
             <li>
-              <img src="public/Marcas/AutoModif.webp" alt="AutoModif logo" />
+              <img src="static/public/Marcas/AutoModif.webp" alt="AutoModif logo" />
             </li>
             <li>
               <img
-                src="public/Marcas/GrantCar.webp"
+                src="static/public/Marcas/GrantCar.webp"
                 alt="Grant Car Concepts logo"
               />
             </li>
             <li>
               <img
-                src="public/Marcas/GetEasyCar.webp"
+                src="static/public/Marcas/GetEasyCar.webp"
                 alt="Get Easy Car logo"
               />
             </li>
             <li>
-              <img src="public/Marcas/YourName.webp" alt="Logo Shield Car" />
+              <img src="static/public/Marcas/YourName.webp" alt="Logo Shield Car" />
             </li>
             <li>
-              <img src="public/Marcas/Company.webp" alt="Company Motors logo" />
+              <img src="static/public/Marcas/Company.webp" alt="Company Motors logo" />
             </li>
             <li>
               <img
-                src="public/Marcas/HARRISAUTOS.webp"
+                src="static/public/Marcas/HARRISAUTOS.webp"
                 alt="Harbers Autos logo"
               />
             </li>
             <li>
-              <img src="public/Marcas/SpeedAuto.webp" alt="Speedauto logo" />
+              <img src="static/public/Marcas/SpeedAuto.webp" alt="Speedauto logo" />
             </li>
             <li>
               <img
-                src="public/Marcas/AutoCompany.webp"
+                src="static/public/Marcas/AutoCompany.webp"
                 alt="Diamond Brand logo"
               />
             </li>
@@ -614,29 +614,29 @@
           <ul>
             <li>
               <img
-                src="public/TiposProductos/DiscoFreno.webp"
+                src="static/public/TiposProductos/DiscoFreno.webp"
                 alt="Brake disc icon"
               />
               <a href="#">STOPTECH</a>
             </li>
             <li>
               <img
-                src="public/TiposProductos/Llanta.webp"
+                src="static/public/TiposProductos/Llanta.webp"
                 alt="Wheel and tire icon"
               />
               <a href="#">WHEEL & TIRE</a>
             </li>
             <li>
-              <img src="public/TiposProductos/Camera.webp" alt="Camera icon" />
+              <img src="static/public/TiposProductos/Camera.webp" alt="Camera icon" />
               <a href="#">CAMERA</a>
             </li>
             <li>
-              <img src="public/TiposProductos/Turbo.webp" alt="Turbo icon" />
+              <img src="static/public/TiposProductos/Turbo.webp" alt="Turbo icon" />
               <a href="#">TURBO</a>
             </li>
             <li>
               <img
-                src="public/TiposProductos/Volante.webp"
+                src="static/public/TiposProductos/Volante.webp"
                 alt="Steering wheel icon"
               />
               <a href="#">STEERING</a>
@@ -665,7 +665,7 @@
             <div class="grid-kits">
               <article>
                 <img
-                  src="public/Kit/VolanteKit.png"
+                  src="static/public/Kit/VolanteKit.png"
                   alt="Task Pendant steering kit product image"
                 />
                 <h3>TASK PENDANT</h3>
@@ -706,7 +706,7 @@
               <article>
                 <div class="contenedor-badge">
                   <img
-                    src="public/Kit/FiltroKit.png"
+                    src="static/public/Kit/FiltroKit.png"
                     alt="Oak Wooden filter kit product image"
                   />
                   <span class="badge-agotado" aria-label="Agotado"
@@ -751,7 +751,7 @@
               <article>
                 <div class="contenedor-badge">
                   <img
-                    src="public/Kit/LlantaKit.png"
+                    src="static/public/Kit/LlantaKit.png"
                     alt="Umbrella Stand wheel kit product image"
                   />
                   <span class="badge-oferta" aria-label="En oferta"
@@ -812,7 +812,7 @@
             <!-- Detalles del producto destacado -->
             <article>
               <img
-                src="public/ProductoDelDia.webp"
+                src="static/public/ProductoDelDia.webp"
                 alt="Yama Camera - Deal of the day product"
               />
               <h4>YAMA CAMERA</h4>
@@ -918,7 +918,7 @@
           <!-- Artículo 1 -->
           <article>
             <img
-              src="public/Tips/FirstTip.webp"
+              src="static/public/Tips/FirstTip.webp"
               alt="Engine maintenance close-up"
             />
             <h3>NEW FROM BUYAUTOPARTS: MAGNETIC</h3>
@@ -933,7 +933,7 @@
 
           <article>
             <img
-              src="public/Tips/SecondTip.webp"
+              src="static/public/Tips/SecondTip.webp"
               alt="Trunk organization with tools"
             />
             <h3>UPGRADE FOR THE E30 AND E36 3 SERIES</h3>
@@ -948,7 +948,7 @@
 
           <article>
             <img
-              src="public/Tips/ThirdTip.webp"
+              src="static/public/Tips/ThirdTip.webp"
               alt="Mechanic fixing car exhaust"
             />
             <h3>FIX YOUR RIDE, PROTECT THE ENVIRONMENT</h3>
@@ -970,7 +970,7 @@
         <h2>Recursos Multimedia</h2>
 
         <video controls>
-          <source src="multimedia/video/Videomultimedia.mp4" type="video/mp4" />
+          <source src="static/public/video/Videomultimedia.mp4" type="video/mp4" />
           Tu navegador no soporta la reproducción de video.
         </video>
 
@@ -978,7 +978,7 @@
 
         <audio controls>
           <source
-            src="multimedia/audio/ComposicionFinal.mp3"
+            src="static/public/audio/ComposicionFinal.mp3"
             type="audio/mp3"
           />
           Tu navegador no soporta la reproducción de audio.
@@ -997,7 +997,7 @@
         <!-- Columna 1: Información de contacto -->
         <section>
           <h2 class="none">Seccion de contacto</h2>
-          <img src="public/AparOscuro.png" alt="APAR logo" />
+          <img src="static/public/AparOscuro.png" alt="APAR logo" />
           <div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -1087,18 +1087,18 @@
           <!-- Métodos de pago aceptados -->
           <section>
             <h3 class="none">Metodos de pago</h3>
-            <img src="public/PaymentsMethods/Paypal.png" alt="PayPal logo" />
-            <img src="public/PaymentsMethods/Visa.png" alt="Visa logo" />
+            <img src="static/public/PaymentsMethods/Paypal.png" alt="PayPal logo" />
+            <img src="static/public/PaymentsMethods/Visa.png" alt="Visa logo" />
             <img
-              src="public/PaymentsMethods/AmericanExpress.png"
+              src="static/public/PaymentsMethods/AmericanExpress.png"
               alt="American Express logo"
             />
             <img
-              src="public/PaymentsMethods/Mastercard.png"
+              src="static/public/PaymentsMethods/Mastercard.png"
               alt="Mastercard logo"
             />
             <img
-              src="public/PaymentsMethods/Discover.png"
+              src="static/public/PaymentsMethods/Discover.png"
               alt="Discover logo"
             />
           </section>
