Add global styles and images for the project
- Created a new CSS file with global variables and general styles for the project.
- Added responsive styles for header, main sections, and footer.
- Included various images for products, brands, and payment methods in the static directory.

--- a/multimedia/indexAPARSemantico.html
+++ b/multimedia/indexAPARSemantico.html
@@ -964,7 +964,32 @@
       </section>
     </main>
 
-  
+    <!-- ========== MULTIMEDIA SECTION ========== -->
+    <section id="multimedia">
+      <div>
+        <h2>Recursos Multimedia</h2>
+
+        <video controls>
+          <source src="static/public/video/Videomultimedia.mp4" type="video/mp4" />
+          Tu navegador no soporta la reproducción de video.
+        </video>
+
+        <!-- Audio multimedia -->
+
+        <audio controls>
+          <source
+            src="static/public/audio/ComposicionFinal.mp3"
+            type="audio/mp3"
+          />
+          Tu navegador no soporta la reproducción de audio.
+        </audio>
+
+        <iframe
+          src="https://www.youtube.com/embed/4AYb3wpbXtc"
+          title="Inazuma Eleven Go Chrono Stones -Episodio 3 español «¡El Raimon renace!»"
+        ></iframe>
+      </div>
+    </section>
 
     <!-- ========== FOOTER ========== -->
     <footer>
