--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div>
         <h1>Bienvenido a la Zona Multimedia</h1>
-        <p class="welcome-text">
+        <p>
             Descubre la experiencia completa de APAR.<br>
             Selecciona uno de los proyectos abajo para acceder.
         </p>
         <nav aria-label="Navegación principal de proyectos">
-            <ul class="project-links">
-                <li><a href="disenyoCSS/indexAPARSemantico.html" class="link-button" aria-describedby="desc-disenyo">Diseño CSS — APAR</a></li>
-                <li><a href="multimedia/indexAPARSemantico.html" class="link-button" aria-describedby="desc-multimedia">Multimedia — APAR</a></li>
-                <li><a href="proyectoAAA/indexAPARSemantico.html" class="link-button" aria-describedby="desc-proyecto">Proyecto AAA — APAR</a></li>
+            <ul>
+                <li><a href="disenyoCSS/indexAPARSemantico.html">Diseño CSS — APAR</a></li>
+                <li><a href="multimedia/indexAPARSemantico.html">Multimedia — APAR</a></li>
+                <li><a href="proyectoAAA/indexAPARSemantico.html">Proyecto AAA — APAR</a></li>
+                <li><a href="proyectoUsabilidad/indexAPARSemantico.html">Proyecto Usabilidad — APAR</a></li>
             </ul>
         </nav>
-        <div class="sr-only" aria-hidden="false">
-            <p id="desc-disenyo">Sección de diseño y estilos accesibles.</p>
-            <p id="desc-multimedia">Sección con audio, imágenes y vídeo del proyecto.</p>
-            <p id="desc-proyecto">Sección del proyecto AAA con recursos y demostraciones.</p>
+        <div aria-hidden="false">
+            <p>Sección de diseño y estilos accesibles.</p>
+            <p>Sección con audio, imágenes y vídeo del proyecto.</p>
+            <p>Sección del proyecto AAA con recursos y demostraciones.</p>
+            <p>Copia del Proyecto AAA enfocada en usabilidad y pruebas.</p>
         </div>
     </div>
 </body>
