--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="static/css/styles.css" />
 
+    <!-- Preload imágenes críticas para mejorar LCP -->
+    <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
+    <link rel="preload" as="image" href="static/public/images/DG.webp">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,20 +18,11 @@
       rel="stylesheet"
     />
 
-    <!-- Critical CSS (non-inline): preload and apply when loaded -->
-    <link rel="preload" href="static/css/critical.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="static/css/critical.css"></noscript>
-
-    <!-- Main stylesheet loaded non-blocking -->
-    <link rel="preload" href="static/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="static/css/styles.css"></noscript>
-
-    <!-- Preload hero image to improve LCP -->
-    <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
-
-    <!-- Bootstrap Icons loaded non-blocking -->
+    <!-- Load icons stylesheet non-blocking -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"></noscript>
+    <noscript>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    </noscript>
   </head>
   <body>
     
@@ -88,7 +83,7 @@
 
         <div>
           <!-- Logo de la empresa -->
-          <img src="static/public/images/DG.webp" alt="APAR logo" width="80" height="80" loading="eager" decoding="async" />
+          <img src="static/public/images/DG.webp" alt="APAR logo" height="80" fetchpriority="high" />
 
           <!-- Formulario de búsqueda de productos -->
           <form action="">
@@ -228,12 +223,14 @@
             <img
               src="static/public/images/ProductosDestacados/RooGooTire.webp"
               alt="Promotional banner for RooGoo Tire products"
+              loading="lazy"
             />
             <div>
               <button>SHOP NOW</button>
               <img
                 src="static/public/images/ProductosDestacados/ASingleDaySale.webp"
                 alt="Single day sale promotional banner"
+                loading="lazy"
               />
             </div>
           </aside>
@@ -266,8 +263,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Neumatico.webp"
                     alt="Horrison tire product image"
-                    width="600" height="400"
-                    loading="lazy" decoding="async"
+                    loading="lazy"
+                    height="200"
                   />
                   <span>Sale !</span>
                 </div>
@@ -317,6 +314,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Llanta.webp"
                     alt="Wallnut Desk wheel product image"
+                    loading="lazy"
+                    height="200"
                   />
                   <span>Sale !</span>
                 </div>
@@ -366,6 +365,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/DiscoFreno.webp"
                     alt="Arper Round brake disc product image"
+                    loading="lazy"
+                    height="200"
                   />
                   <span>Sale !</span>
                 </div>
@@ -415,6 +416,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Aceite.webp"
                     alt="Auto oil product image"
+                    loading="lazy"
+                    height="200"
                   />
                   <span>Sale !</span>
                 </div>
@@ -464,6 +467,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Rueda.webp"
                     alt="Ulivo Set wheel product image"
+                    loading="lazy"
+                    height="200"
                   />
                 </div>
 
@@ -509,6 +514,8 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Turbocompresor.webp"
                     alt="Ottoman Turbo turbocharger product image"
+                    loading="lazy"
+                    height="200"
                   />
                   <span>Sale !</span>
                 </div>
@@ -577,48 +584,52 @@
               </svg>
             </li>
             <li>
-              <img src="static/public/images/Marcas/SportCar1.webp" alt="Sportcar logo" />
+              <img src="static/public/images/Marcas/SportCar1.webp" alt="Sportcar logo" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/AutoDetalier.webp" alt="AutoDetailer" />
+              <img src="static/public/images/Marcas/AutoDetalier.webp" alt="AutoDetailer" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/SportCar2.webp" alt="Sportcar logo 2" />
+              <img src="static/public/images/Marcas/SportCar2.webp" alt="Sportcar logo 2" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/AutoModif.webp" alt="AutoModif logo" />
+              <img src="static/public/images/Marcas/AutoModif.webp" alt="AutoModif logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/GrantCar.webp"
                 alt="Grant Car Concepts logo"
+                loading="lazy"
               />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/GetEasyCar.webp"
                 alt="Get Easy Car logo"
+                loading="lazy"
               />
             </li>
             <li>
-              <img src="static/public/images/Marcas/YourName.webp" alt="Logo Shield Car" />
+              <img src="static/public/images/Marcas/YourName.webp" alt="Logo Shield Car" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/Company.webp" alt="Company Motors logo" />
+              <img src="static/public/images/Marcas/Company.webp" alt="Company Motors logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/HARRISAUTOS.webp"
                 alt="Harbers Autos logo"
+                loading="lazy"
               />
             </li>
             <li>
-              <img src="static/public/images/Marcas/SpeedAuto.webp" alt="Speedauto logo" />
+              <img src="static/public/images/Marcas/SpeedAuto.webp" alt="Speedauto logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/AutoCompany.webp"
                 alt="Diamond Brand logo"
+                loading="lazy"
               />
             </li>
           </ul>
@@ -635,6 +646,7 @@
               <img
                 src="static/public/images/TiposProductos/DiscoFreno.webp"
                 alt="Brake disc icon"
+                loading="lazy"
               />
               <a href="#">STOPTECH</a>
             </li>
@@ -642,21 +654,23 @@
               <img
                 src="static/public/images/TiposProductos/Llanta.webp"
                 alt="Wheel and tire icon"
+                loading="lazy"
               />
               <a href="#">WHEEL & TIRE</a>
             </li>
             <li>
-              <img src="static/public/images/TiposProductos/Camera.webp" alt="Camera icon" />
+              <img src="static/public/images/TiposProductos/Camera.webp" alt="Camera icon" loading="lazy" />
               <a href="#">CAMERA</a>
             </li>
             <li>
-              <img src="static/public/images/TiposProductos/Turbo.webp" alt="Turbo icon" />
+              <img src="static/public/images/TiposProductos/Turbo.webp" alt="Turbo icon" loading="lazy" />
               <a href="#">TURBO</a>
             </li>
             <li>
               <img
                 src="static/public/images/TiposProductos/Volante.webp"
                 alt="Steering wheel icon"
+                loading="lazy"
               />
               <a href="#">STEERING</a>
             </li>
@@ -684,9 +698,10 @@
             <div class="grid-kits">
               <article>
                 <img
-                  src="static/public/images/Kit/VolanteKit.png"
-                  alt="Task Pendant steering kit product image"
-                />
+                      src="static/public/images/Kit/VolanteKit.png"
+                      alt="Task Pendant steering kit product image"
+                      loading="lazy"
+                    />
                 <h3>TASK PENDANT</h3>
                 <ul aria-label="Valoración: 5 de 5 estrellas">
                   <li>
@@ -727,6 +742,7 @@
                   <img
                     src="static/public/images/Kit/FiltroKit.png"
                     alt="Oak Wooden filter kit product image"
+                    loading="lazy"
                   />
                   <span class="badge-agotado">Sold out</span>
                 </div>
@@ -770,6 +786,7 @@
                   <img
                     src="static/public/images/Kit/LlantaKit.png"
                     alt="Umbrella Stand wheel kit product image"
+                    loading="lazy"
                   />
                   <span class="badge-oferta">Sale !</span>
                 </div>
@@ -829,8 +846,8 @@
               <img
                 src="static/public/images/ProductoDelDia.webp"
                 alt="Yama Camera - Deal of the day product"
-                width="190" height="190"
-                loading="lazy" decoding="async"
+                loading="lazy"
+                height="190"
               />
               <h4>YAMA CAMERA</h4>
               <ul>
@@ -937,6 +954,7 @@
             <img
               src="static/public/images/Tips/FirstTip.webp"
               alt="Engine maintenance close-up"
+              loading="lazy"
             />
             <h3>NEW FROM BUYAUTOPARTS: MAGNETIC</h3>
             <div>AIR CONDITIONING — by apar</div>
@@ -952,6 +970,7 @@
             <img
               src="static/public/images/Tips/SecondTip.webp"
               alt="Trunk organization with tools"
+              loading="lazy"
             />
             <h3>UPGRADE FOR THE E30 AND E36 3 SERIES</h3>
             <div>AUTO PARTS, BRAKES — by apar</div>
@@ -967,6 +986,7 @@
             <img
               src="static/public/images/Tips/ThirdTip.webp"
               alt="Mechanic fixing car exhaust"
+              loading="lazy"
             />
             <h3>FIX YOUR RIDE, PROTECT THE ENVIRONMENT</h3>
             <div>CAR FAIL, CAR FUN, CAR NEWS — by apar</div>
@@ -989,7 +1009,7 @@
         <!-- Columna 1: Información de contacto -->
         <section>
           <h2 class="none">Seccion de contacto</h2>
-          <img src="static/public/images/AparOscuro.png" alt="APAR logo" width="160" height="80" loading="lazy" decoding="async" />
+          <img src="static/public/images/AparOscuro.png" alt="APAR logo" loading="lazy" />
           <div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -1080,22 +1100,22 @@
           <!-- Métodos de pago aceptados -->
           <section>
             <h3 class="none">Metodos de pago</h3>
-            <img src="static/public/images/PaymentsMethods/Paypal.png" alt="PayPal logo" width="64" height="40" loading="lazy" decoding="async" />
-            <img src="static/public/images/PaymentsMethods/Visa.png" alt="Visa logo" width="64" height="40" loading="lazy" decoding="async" />
+            <img src="static/public/images/PaymentsMethods/Paypal.png" alt="PayPal logo" loading="lazy" />
+            <img src="static/public/images/PaymentsMethods/Visa.png" alt="Visa logo" loading="lazy" />
             <img
               src="static/public/images/PaymentsMethods/AmericanExpress.png"
               alt="American Express logo"
-              width="64" height="40" loading="lazy" decoding="async"
+              loading="lazy"
             />
             <img
               src="static/public/images/PaymentsMethods/Mastercard.png"
               alt="Mastercard logo"
-              width="64" height="40" loading="lazy" decoding="async"
+              loading="lazy"
             />
             <img
               src="static/public/images/PaymentsMethods/Discover.png"
               alt="Discover logo"
-              width="64" height="40" loading="lazy" decoding="async"
+              loading="lazy"
             />
           </section>
         </section>
