--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APAR</title>
 
-    <link rel="stylesheet" href="static/css/styles.css" />
+    <!-- Critical CSS (minimal, above-the-fold) -->
+    <style>
+      /* Critical styles: header, logo and hero */
+      body{margin:0;overflow-x:hidden;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;background:#fff;color:#0f172a}
+      #barra-busqueda img{height:80px;width:auto;display:inline-block}
+      #slider{display:flex;flex-direction:column;align-items:center;justify-content:center;background-image:url(static/public/images/FondoSlider.webp);background-repeat:no-repeat;background-size:cover;background-position:center;color:#fff;padding:180px 20px}
+      #slider h2{font-size:2rem;margin:0}
+      .visually-hidden{position:absolute!important;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0 0 0 0);clip-path:inset(50%);white-space:nowrap;border:0}
+    </style>
+
+    <!-- Load main stylesheet asynchronously to avoid render-blocking -->
+    <link rel="stylesheet" href="static/css/styles.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="static/css/styles.css"></noscript>
 
     <!-- Preload imágenes críticas para mejorar LCP -->
     <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
     <link rel="preload" as="image" href="static/public/images/DG.webp">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
