Optimize stylesheet loading by implementing preload for improved performance

--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APAR</title>
 
-    <link rel="stylesheet" href="static/css/styles.css" />
+   <link rel="preload" href="static/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript>
+  <link rel="stylesheet" href="static/css/styles.css">
+</noscript>
 
     <!-- Preload imágenes críticas para mejorar LCP -->
     <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
@@ -14,9 +17,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&family=Nova+Square&display=swap"
-      rel="stylesheet"
-    />
+  href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
+  rel="stylesheet"
+/>
 
     <!-- Load icons stylesheet non-blocking -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
