--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -9,14 +9,16 @@
 
     <!-- Preload imágenes críticas para mejorar LCP -->
     <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
-    <link rel="preload" as="image" href="static/public/images/DG.webp">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&family=Nova+Square&display=swap"
-      rel="stylesheet"
-    />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
+  rel="stylesheet"
+  media="print"
+  onload="this.media='all'"
+>
 
     <!-- Load icons stylesheet non-blocking -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
