--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APAR</title>
 
-    <link rel="stylesheet" href="static/css/styles.css" />
-
-    <!-- Preload imágenes críticas para mejorar LCP -->
+    <!-- Preload imágenes críticas para mejorar LCP (prioritario antes del CSS) -->
     <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
+    <link rel="stylesheet" href="static/css/styles.css" />
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
