--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -7,6 +7,14 @@
 
     <!-- Preload imágenes críticas para mejorar LCP (prioritario antes del CSS) -->
     <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
+
+    <!-- Critical CSS: make hero background discoverable and ensure visible area for LCP
+         Inline to avoid waiting for full stylesheet. Keep minimal. -->
+    <style>
+      #slider{position:relative;background-image:url('static/public/images/FondoSlider.webp');background-size:cover;background-position:center;min-height:300px}
+      .lcp-image{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;opacity:0;pointer-events:none}
+    </style>
+
     <link rel="stylesheet" href="static/css/styles.css" />
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
