Refactor HTML head for improved LCP performance by optimizing preload links and ensuring non-blocking stylesheets

--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -1,38 +1,54 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>APAR</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>APAR</title>
 
-    <!-- Preload imágenes críticas para mejorar LCP (prioritario antes del CSS) -->
-    <link rel="preload" as="image" href="static/public/images/FondoSlider.webp">
-    <link rel="stylesheet" href="static/css/styles.css" />
+  <!-- Preload imagen LCP -->
+  <link
+    rel="preload"
+    as="image"
+    href="static/public/images/FondoSlider.webp"
+    fetchpriority="high"
+  >
 
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- CSS principal sin bloquear render -->
+  <link
+    rel="preload"
+    href="static/css/styles.css"
+    as="style"
+    onload="this.onload=null;this.rel='stylesheet'"
+  >
+  <noscript>
+    <link rel="stylesheet" href="static/css/styles.css">
+  </noscript>
 
-<link
-  href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
-  rel="stylesheet"
-  media="print"
-  onload="this.media='all'"
->
+  <!-- Google Font optimizada -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!-- Bootstrap Icons cargado de forma diferida (no bloqueante) -->
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-  media="print"
-  onload="this.media='all'"
->
-<noscript>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
+    rel="stylesheet"
+    media="print"
+    onload="this.media='all'"
+  >
+
+  <!-- Bootstrap Icons sin bloqueo -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    media="print"
+    onload="this.media='all'"
   >
-</noscript>
-  </head>
+  <noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    >
+  </noscript>
+</head>
   <body>
     
     <!-- ========== Página llamada desde la carpeta Multimedia ========== -->
