Enhance image element for better loading performance and add font-display swap for improved text rendering

--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -108,8 +108,13 @@
 
         <div>
           <!-- Logo de la empresa -->
-          <img src="static/public/images/DG.webp" alt="APAR logo" height="80" fetchpriority="high" />
-
+<img
+  src="static/public/images/DG.webp"
+  alt="APAR logo"
+  width="160"
+  height="80"
+  fetchpriority="high"
+>
           <!-- Formulario de búsqueda de productos -->
           <form action="">
             <label for="searchInput" class="visually-hidden">Search products</label>
