Add width and height attributes to slider image for improved layout and performance

--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -172,7 +172,7 @@
       <h1 class="visually-hidden">Página Web APAR</h1>
       <!-- Sección del slider principal con búsqueda de vehículos -->
       <section id="slider">
-        <img src="static/public/images/FondoSlider.webp" alt="" fetchpriority="high" decoding="async" aria-hidden="true" class="lcp-image" />
+        <img src="static/public/images/FondoSlider.webp" alt="" fetchpriority="high" decoding="async" aria-hidden="true" class="lcp-image" width="1920" height="1080" />
         <div>
           <h2>SEARCH MATCHING YOUR VEHICLE</h2>
           <div>Customize, Modify,Upgrade,Repair,Replace</div>
